NAS-140653: Fix root cause of word-break in mat-list-item spans and apply HTML fix consistently

--- a/src/app/modules/layout/secondary-menu/secondary-menu.component.scss
+++ b/src/app/modules/layout/secondary-menu/secondary-menu.component.scss
@@ -7,9 +7,6 @@
 
   .submenu-text {
     flex: 1;
-    min-width: 0;
-    word-break: normal;
-    overflow-wrap: normal;
   }
 
   // Inline badge dot styling for submenu
