--- a/src/assets/styles/other/_material-reduction.scss
+++ b/src/assets/styles/other/_material-reduction.scss
@@ -886,8 +886,7 @@ mat-list-item {
     flex-wrap: wrap;
     max-width: fill-available;
     white-space: pre-wrap;
-    word-break: break-all;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
   }
 }
 
